--- a/_examples/AlpKit.Api.Examples/AlpKit.Api.Examples.csproj
+++ b/_examples/AlpKit.Api.Examples/AlpKit.Api.Examples.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlpKit.Caching" Version="1.0.0" />
+    <PackageReference Include="AlpKit.Exception" Version="1.0.0" />
+    <PackageReference Include="AlpKit.Logging" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
