--- a/DatabaseKit/AlpKit.MsSqlAdapter/AlpKit.MsSqlAdapter.csproj
+++ b/DatabaseKit/AlpKit.MsSqlAdapter/AlpKit.MsSqlAdapter.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>AlpKit.Mssql</PackageId>
-    <Version>1.0.2.8</Version>
+    <Version>1.0.3.3</Version>
     <Authors>Alper Basda</Authors>
     <Company>NurayMindTech</Company>
     <Description>
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
