UI login senaryısou değişti.

--- a/PresentationKit/AlpKit.Presentation.UI/AlpKit.Presentation.UI.csproj
+++ b/PresentationKit/AlpKit.Presentation.UI/AlpKit.Presentation.UI.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\..\Common\AlpKit.Common\AlpKit.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
